feat: create and update users
* feat: create user

* feat: crupdate user

* docs(api): do not show password anymore after user is created

* chore: refactor create user and correctly map birthdate

* feat: get authenticated user

* fix: income type in database

* fix: migration versions

* feat: crupdate user

* fix: retunr null if income is null

* refactor: update user's informations

---------
